neiva/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> gramatica
Rule 1     gramatica -> programa .
Rule 2     programa -> cabecalho corpo
Rule 3     cabecalho -> titulo declaracao_subprogramas declaracoes_variaveis
Rule 4     titulo -> PROGRAM ID ;
Rule 5     declaracao_subprogramas -> declaracao_subprogramas procedure_declaration
Rule 6     declaracao_subprogramas -> declaracao_subprogramas function_declaration
Rule 7     declaracao_subprogramas -> empty
Rule 8     procedure_declaration -> PROCEDURE ID ; bloco_subprograma ;
Rule 9     procedure_declaration -> PROCEDURE ID ( parametros ) ; bloco_subprograma ;
Rule 10    function_declaration -> FUNCTION ID : tipo ; bloco_subprograma ;
Rule 11    function_declaration -> FUNCTION ID ( parametros ) : tipo ; bloco_subprograma ;
Rule 12    bloco_subprograma -> declaracoes_variaveis corpo
Rule 13    parametros -> lista_parametros
Rule 14    parametros -> empty
Rule 15    lista_parametros -> lista_id : tipo
Rule 16    lista_parametros -> lista_id : tipo ; lista_parametros
Rule 17    declaracoes_variaveis -> VAR declaracoes
Rule 18    declaracoes_variaveis -> empty
Rule 19    declaracoes -> declaracao
Rule 20    declaracoes -> declaracao declaracoes
Rule 21    declaracao -> lista_id : tipo ;
Rule 22    lista_id -> ID
Rule 23    lista_id -> lista_id , ID
Rule 24    tipo -> INTEGER
Rule 25    tipo -> REAL
Rule 26    tipo -> BOOLEAN
Rule 27    tipo -> CHAR
Rule 28    tipo -> STRING
Rule 29    tipo -> tipo_array
Rule 30    tipo_array -> ARRAY [ NUMBER RANGE NUMBER ] OF tipo
Rule 31    corpo -> BEGIN lista_instrucoes END
Rule 32    lista_instrucoes -> instrucao
Rule 33    lista_instrucoes -> lista_instrucoes ; instrucao
Rule 34    instrucao -> atribuicao
Rule 35    instrucao -> leitura
Rule 36    instrucao -> escrita
Rule 37    instrucao -> if_statement
Rule 38    instrucao -> while_statement
Rule 39    instrucao -> for_statement
Rule 40    instrucao -> chamada_procedimento
Rule 41    instrucao -> bloco
Rule 42    instrucao -> empty
Rule 43    bloco -> BEGIN lista_instrucoes END
Rule 44    atribuicao -> variavel ASSIGN expressao
Rule 45    chamada_procedimento -> ID ( lista_expressao )
Rule 46    chamada_procedimento -> ID
Rule 47    leitura -> READ ( lista_variaveis )
Rule 48    leitura -> READLN ( lista_variaveis )
Rule 49    leitura -> READLN
Rule 50    escrita -> WRITE ( lista_expressao )
Rule 51    escrita -> WRITELN ( lista_expressao )
Rule 52    escrita -> WRITELN
Rule 53    lista_variaveis -> variavel
Rule 54    lista_variaveis -> lista_variaveis , variavel
Rule 55    if_statement -> IF expressao THEN instrucao
Rule 56    if_statement -> IF expressao THEN instrucao ELSE instrucao
Rule 57    while_statement -> WHILE expressao DO instrucao
Rule 58    for_statement -> FOR ID ASSIGN expressao TO expressao DO instrucao
Rule 59    for_statement -> FOR ID ASSIGN expressao DOWNTO expressao DO instrucao
Rule 60    lista_expressao -> expressao
Rule 61    lista_expressao -> lista_expressao , expressao
Rule 62    expressao -> expressao_logica
Rule 63    expressao_logica -> expressao_logica OR expressao_relacional
Rule 64    expressao_logica -> expressao_logica AND expressao_relacional
Rule 65    expressao_logica -> expressao_relacional
Rule 66    expressao_relacional -> expressao_aritmetica operador_relacional expressao_aritmetica
Rule 67    expressao_relacional -> expressao_aritmetica
Rule 68    operador_relacional -> EQUALS
Rule 69    operador_relacional -> NOT_EQUALS
Rule 70    operador_relacional -> LESS_THAN
Rule 71    operador_relacional -> LESS_THAN_OR_EQUAL_TO
Rule 72    operador_relacional -> GREATER_THAN
Rule 73    operador_relacional -> GREATER_THAN_OR_EQUAL_TO
Rule 74    expressao_aritmetica -> expressao_aritmetica + termo
Rule 75    expressao_aritmetica -> expressao_aritmetica - termo
Rule 76    expressao_aritmetica -> termo
Rule 77    termo -> termo * fator
Rule 78    termo -> termo / fator
Rule 79    termo -> termo DIV fator
Rule 80    termo -> termo MOD fator
Rule 81    termo -> fator
Rule 82    fator -> NUMBER
Rule 83    fator -> REAL_NUMBER
Rule 84    fator -> STRING_LITERAL
Rule 85    fator -> TRUE
Rule 86    fator -> FALSE
Rule 87    fator -> variavel
Rule 88    fator -> chamada_funcao
Rule 89    fator -> ( expressao )
Rule 90    fator -> NOT fator
Rule 91    fator -> - fator
Rule 92    fator -> + fator
Rule 93    variavel -> ID
Rule 94    variavel -> ID [ expressao ]
Rule 95    chamada_funcao -> ID ( lista_expressao )
Rule 96    chamada_funcao -> LENGTH ( expressao )
Rule 97    empty -> <empty>

Terminals, with rules where they appear

(                    : 9 11 45 47 48 50 51 89 95 96
)                    : 9 11 45 47 48 50 51 89 95 96
*                    : 77
+                    : 74 92
,                    : 23 54 61
-                    : 75 91
.                    : 1
/                    : 78
:                    : 10 11 15 16 21
;                    : 4 8 8 9 9 10 10 11 11 16 21 33
AND                  : 64
ARRAY                : 30
ASSIGN               : 44 58 59
BEGIN                : 31 43
BOOLEAN              : 26
CHAR                 : 27
DIV                  : 79
DO                   : 57 58 59
DOWNTO               : 59
ELSE                 : 56
END                  : 31 43
EQUALS               : 68
FALSE                : 86
FOR                  : 58 59
FUNCTION             : 10 11
GREATER_THAN         : 72
GREATER_THAN_OR_EQUAL_TO : 73
ID                   : 4 8 9 10 11 22 23 45 46 58 59 93 94 95
IF                   : 55 56
INTEGER              : 24
LENGTH               : 96
LESS_THAN            : 70
LESS_THAN_OR_EQUAL_TO : 71
MOD                  : 80
NOT                  : 90
NOT_EQUALS           : 69
NUMBER               : 30 30 82
OF                   : 30
OR                   : 63
PROCEDURE            : 8 9
PROGRAM              : 4
RANGE                : 30
READ                 : 47
READLN               : 48 49
REAL                 : 25
REAL_NUMBER          : 83
STRING               : 28
STRING_LITERAL       : 84
THEN                 : 55 56
TO                   : 58
TRUE                 : 85
VAR                  : 17
WHILE                : 57
WRITE                : 50
WRITELN              : 51 52
[                    : 30 94
]                    : 30 94
error                : 

Nonterminals, with rules where they appear

atribuicao           : 34
bloco                : 41
bloco_subprograma    : 8 9 10 11
cabecalho            : 2
chamada_funcao       : 88
chamada_procedimento : 40
corpo                : 2 12
declaracao           : 19 20
declaracao_subprogramas : 3 5 6
declaracoes          : 17 20
declaracoes_variaveis : 3 12
empty                : 7 14 18 42
escrita              : 36
expressao            : 44 55 56 57 58 58 59 59 60 61 89 94 96
expressao_aritmetica : 66 66 67 74 75
expressao_logica     : 62 63 64
expressao_relacional : 63 64 65
fator                : 77 78 79 80 81 90 91 92
for_statement        : 39
function_declaration : 6
gramatica            : 0
if_statement         : 37
instrucao            : 32 33 55 56 56 57 58 59
leitura              : 35
lista_expressao      : 45 50 51 61 95
lista_id             : 15 16 21 23
lista_instrucoes     : 31 33 43
lista_parametros     : 13 16
lista_variaveis      : 47 48 54
operador_relacional  : 66
parametros           : 9 11
procedure_declaration : 5
programa             : 1
termo                : 74 75 76 77 78 79 80
tipo                 : 10 11 15 16 21 30
tipo_array           : 29
titulo               : 3
variavel             : 44 53 54 87
while_statement      : 38

Parsing method: LALR

state 0

    (0) S' -> . gramatica
    (1) gramatica -> . programa .
    (2) programa -> . cabecalho corpo
    (3) cabecalho -> . titulo declaracao_subprogramas declaracoes_variaveis
    (4) titulo -> . PROGRAM ID ;

    PROGRAM         shift and go to state 5

    gramatica                      shift and go to state 1
    programa                       shift and go to state 2
    cabecalho                      shift and go to state 3
    titulo                         shift and go to state 4

state 1

    (0) S' -> gramatica .



state 2

    (1) gramatica -> programa . .

    .               shift and go to state 6


state 3

    (2) programa -> cabecalho . corpo
    (31) corpo -> . BEGIN lista_instrucoes END

    BEGIN           shift and go to state 8

    corpo                          shift and go to state 7

state 4

    (3) cabecalho -> titulo . declaracao_subprogramas declaracoes_variaveis
    (5) declaracao_subprogramas -> . declaracao_subprogramas procedure_declaration
    (6) declaracao_subprogramas -> . declaracao_subprogramas function_declaration
    (7) declaracao_subprogramas -> . empty
    (97) empty -> .

    VAR             reduce using rule 97 (empty -> .)
    PROCEDURE       reduce using rule 97 (empty -> .)
    FUNCTION        reduce using rule 97 (empty -> .)
    BEGIN           reduce using rule 97 (empty -> .)

    declaracao_subprogramas        shift and go to state 9
    empty                          shift and go to state 10

state 5

    (4) titulo -> PROGRAM . ID ;

    ID              shift and go to state 11


state 6

    (1) gramatica -> programa . .

    $end            reduce using rule 1 (gramatica -> programa . .)


state 7

    (2) programa -> cabecalho corpo .

    .               reduce using rule 2 (programa -> cabecalho corpo .)


state 8

    (31) corpo -> BEGIN . lista_instrucoes END
    (32) lista_instrucoes -> . instrucao
    (33) lista_instrucoes -> . lista_instrucoes ; instrucao
    (34) instrucao -> . atribuicao
    (35) instrucao -> . leitura
    (36) instrucao -> . escrita
    (37) instrucao -> . if_statement
    (38) instrucao -> . while_statement
    (39) instrucao -> . for_statement
    (40) instrucao -> . chamada_procedimento
    (41) instrucao -> . bloco
    (42) instrucao -> . empty
    (44) atribuicao -> . variavel ASSIGN expressao
    (47) leitura -> . READ ( lista_variaveis )
    (48) leitura -> . READLN ( lista_variaveis )
    (49) leitura -> . READLN
    (50) escrita -> . WRITE ( lista_expressao )
    (51) escrita -> . WRITELN ( lista_expressao )
    (52) escrita -> . WRITELN
    (55) if_statement -> . IF expressao THEN instrucao
    (56) if_statement -> . IF expressao THEN instrucao ELSE instrucao
    (57) while_statement -> . WHILE expressao DO instrucao
    (58) for_statement -> . FOR ID ASSIGN expressao TO expressao DO instrucao
    (59) for_statement -> . FOR ID ASSIGN expressao DOWNTO expressao DO instrucao
    (45) chamada_procedimento -> . ID ( lista_expressao )
    (46) chamada_procedimento -> . ID
    (43) bloco -> . BEGIN lista_instrucoes END
    (97) empty -> .
    (93) variavel -> . ID
    (94) variavel -> . ID [ expressao ]

    READ            shift and go to state 25
    READLN          shift and go to state 26
    WRITE           shift and go to state 27
    WRITELN         shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    ID              shift and go to state 32
    BEGIN           shift and go to state 12
    END             reduce using rule 97 (empty -> .)
    ;               reduce using rule 97 (empty -> .)

    lista_instrucoes               shift and go to state 13
    instrucao                      shift and go to state 14
    atribuicao                     shift and go to state 15
    leitura                        shift and go to state 16
    escrita                        shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    chamada_procedimento           shift and go to state 21
    bloco                          shift and go to state 22
    empty                          shift and go to state 23
    variavel                       shift and go to state 24

state 9

    (3) cabecalho -> titulo declaracao_subprogramas . declaracoes_variaveis
    (5) declaracao_subprogramas -> declaracao_subprogramas . procedure_declaration
    (6) declaracao_subprogramas -> declaracao_subprogramas . function_declaration
    (17) declaracoes_variaveis -> . VAR declaracoes
    (18) declaracoes_variaveis -> . empty
    (8) procedure_declaration -> . PROCEDURE ID ; bloco_subprograma ;
    (9) procedure_declaration -> . PROCEDURE ID ( parametros ) ; bloco_subprograma ;
    (10) function_declaration -> . FUNCTION ID : tipo ; bloco_subprograma ;
    (11) function_declaration -> . FUNCTION ID ( parametros ) : tipo ; bloco_subprograma ;
    (97) empty -> .

    VAR             shift and go to state 36
    PROCEDURE       shift and go to state 38
    FUNCTION        shift and go to state 39
    BEGIN           reduce using rule 97 (empty -> .)

    declaracoes_variaveis          shift and go to state 33
    procedure_declaration          shift and go to state 34
    function_declaration           shift and go to state 35
    empty                          shift and go to state 37

state 10

    (7) declaracao_subprogramas -> empty .

    VAR             reduce using rule 7 (declaracao_subprogramas -> empty .)
    PROCEDURE       reduce using rule 7 (declaracao_subprogramas -> empty .)
    FUNCTION        reduce using rule 7 (declaracao_subprogramas -> empty .)
    BEGIN           reduce using rule 7 (declaracao_subprogramas -> empty .)


state 11

    (4) titulo -> PROGRAM ID . ;

    ;               shift and go to state 40


state 12

    (43) bloco -> BEGIN . lista_instrucoes END
    (32) lista_instrucoes -> . instrucao
    (33) lista_instrucoes -> . lista_instrucoes ; instrucao
    (34) instrucao -> . atribuicao
    (35) instrucao -> . leitura
    (36) instrucao -> . escrita
    (37) instrucao -> . if_statement
    (38) instrucao -> . while_statement
    (39) instrucao -> . for_statement
    (40) instrucao -> . chamada_procedimento
    (41) instrucao -> . bloco
    (42) instrucao -> . empty
    (44) atribuicao -> . variavel ASSIGN expressao
    (47) leitura -> . READ ( lista_variaveis )
    (48) leitura -> . READLN ( lista_variaveis )
    (49) leitura -> . READLN
    (50) escrita -> . WRITE ( lista_expressao )
    (51) escrita -> . WRITELN ( lista_expressao )
    (52) escrita -> . WRITELN
    (55) if_statement -> . IF expressao THEN instrucao
    (56) if_statement -> . IF expressao THEN instrucao ELSE instrucao
    (57) while_statement -> . WHILE expressao DO instrucao
    (58) for_statement -> . FOR ID ASSIGN expressao TO expressao DO instrucao
    (59) for_statement -> . FOR ID ASSIGN expressao DOWNTO expressao DO instrucao
    (45) chamada_procedimento -> . ID ( lista_expressao )
    (46) chamada_procedimento -> . ID
    (43) bloco -> . BEGIN lista_instrucoes END
    (97) empty -> .
    (93) variavel -> . ID
    (94) variavel -> . ID [ expressao ]

    READ            shift and go to state 25
    READLN          shift and go to state 26
    WRITE           shift and go to state 27
    WRITELN         shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    ID              shift and go to state 32
    BEGIN           shift and go to state 12
    END             reduce using rule 97 (empty -> .)
    ;               reduce using rule 97 (empty -> .)

    lista_instrucoes               shift and go to state 41
    instrucao                      shift and go to state 14
    atribuicao                     shift and go to state 15
    leitura                        shift and go to state 16
    escrita                        shift and go to state 17
    if_statement                   shift and go to state 18
    while_statement                shift and go to state 19
    for_statement                  shift and go to state 20
    chamada_procedimento           shift and go to state 21
    bloco                          shift and go to state 22
    empty                          shift and go to state 23
    variavel                       shift and go to state 24

state 13

    (31) corpo -> BEGIN lista_instrucoes . END
    (33) lista_instrucoes -> lista_instrucoes . ; instrucao

    END             shift and go to state 42
    ;               shift and go to state 43


state 14

    (32) lista_instrucoes -> instrucao .

    END             reduce using rule 32 (lista_instrucoes -> instrucao .)
    ;               reduce using rule 32 (lista_instrucoes -> instrucao .)


state 15

    (34) instrucao -> atribuicao .

    END             reduce using rule 34 (instrucao -> atribuicao .)
    ;               reduce using rule 34 (instrucao -> atribuicao .)
    ELSE            reduce using rule 34 (instrucao -> atribuicao .)


state 16

    (35) instrucao -> leitura .

    END             reduce using rule 35 (instrucao -> leitura .)
    ;               reduce using rule 35 (instrucao -> leitura .)
    ELSE            reduce using rule 35 (instrucao -> leitura .)


state 17

    (36) instrucao -> escrita .

    END             reduce using rule 36 (instrucao -> escrita .)
    ;               reduce using rule 36 (instrucao -> escrita .)
    ELSE            reduce using rule 36 (instrucao -> escrita .)


state 18

    (37) instrucao -> if_statement .

    END             reduce using rule 37 (instrucao -> if_statement .)
    ;               reduce using rule 37 (instrucao -> if_statement .)
    ELSE            reduce using rule 37 (instrucao -> if_statement .)


state 19

    (38) instrucao -> while_statement .

    END             reduce using rule 38 (instrucao -> while_statement .)
    ;               reduce using rule 38 (instrucao -> while_statement .)
    ELSE            reduce using rule 38 (instrucao -> while_statement .)


state 20

    (39) instrucao -> for_statement .

    END             reduce using rule 39 (instrucao -> for_statement .)
    ;               reduce using rule 39 (instrucao -> for_statement .)
    ELSE            reduce using rule 39 (instrucao -> for_statement .)


state 21

    (40) instrucao -> chamada_procedimento .

    END             reduce using rule 40 (instrucao -> chamada_procedimento .)
    ;               reduce using rule 40 (instrucao -> chamada_procedimento .)
    ELSE            reduce using rule 40 (instrucao -> chamada_procedimento .)


state 22

    (41) instrucao -> bloco .

    END             reduce using rule 41 (instrucao -> bloco .)
    ;               reduce using rule 41 (instrucao -> bloco .)
    ELSE            reduce using rule 41 (instrucao -> bloco .)


state 23

    (42) instrucao -> empty .

    END             reduce using rule 42 (instrucao -> empty .)
    ;               reduce using rule 42 (instrucao -> empty .)
    ELSE            reduce using rule 42 (instrucao -> empty .)


state 24

    (44) atribuicao -> variavel . ASSIGN expressao

    ASSIGN          shift and go to state 44


state 25

    (47) leitura -> READ . ( lista_variaveis )

    (               shift and go to state 45


state 26

    (48) leitura -> READLN . ( lista_variaveis )
    (49) leitura -> READLN .

    (               shift and go to state 46
    END             reduce using rule 49 (leitura -> READLN .)
    ;               reduce using rule 49 (leitura -> READLN .)
    ELSE            reduce using rule 49 (leitura -> READLN .)


state 27

    (50) escrita -> WRITE . ( lista_expressao )

    (               shift and go to state 47


state 28

    (51) escrita -> WRITELN . ( lista_expressao )
    (52) escrita -> WRITELN .

    (               shift and go to state 48
    END             reduce using rule 52 (escrita -> WRITELN .)
    ;               reduce using rule 52 (escrita -> WRITELN .)
    ELSE            reduce using rule 52 (escrita -> WRITELN .)


state 29

    (55) if_statement -> IF . expressao THEN instrucao
    (56) if_statement -> IF . expressao THEN instrucao ELSE instrucao
    (62) expressao -> . expressao_logica
    (63) expressao_logica -> . expressao_logica OR expressao_relacional
    (64) expressao_logica -> . expressao_logica AND expressao_relacional
    (65) expressao_logica -> . expressao_relacional
    (66) expressao_relacional -> . expressao_aritmetica operador_relacional expressao_aritmetica
    (67) expressao_relacional -> . expressao_aritmetica
    (74) expressao_aritmetica -> . expressao_aritmetica + termo
    (75) expressao_aritmetica -> . expressao_aritmetica - termo
    (76) expressao_aritmetica -> . termo
    (77) termo -> . termo * fator
    (78) termo -> . termo / fator
    (79) termo -> . termo DIV fator
    (80) termo -> . termo MOD fator
    (81) termo -> . fator
    (82) fator -> . NUMBER
    (83) fator -> . REAL_NUMBER
    (84) fator -> . STRING_LITERAL
    (85) fator -> . TRUE
    (86) fator -> . FALSE
    (87) fator -> . variavel
    (88) fator -> . chamada_funcao
    (89) fator -> . ( expressao )
    (90) fator -> . NOT fator
    (91) fator -> . - fator
    (92) fator -> . + fator
    (93) variavel -> . ID
    (94) variavel -> . ID [ expressao ]
    (95) chamada_funcao -> . ID ( lista_expressao )
    (96) chamada_funcao -> . LENGTH ( expressao )

    NUMBER          shift and go to state 57
    REAL_NUMBER     shift and go to state 58
    STRING_LITERAL  shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    (               shift and go to state 64
    NOT             shift and go to state 65
    -               shift and go to state 55
    +               shift and go to state 53
    ID              shift and go to state 66
    LENGTH          shift and go to state 67

    expressao                      shift and go to state 49
    expressao_logica               shift and go to state 50
    expressao_relacional           shift and go to state 51
    expressao_aritmetica           shift and go to state 52
    termo                          shift and go to state 54
    fator                          shift and go to state 56
    variavel                       shift and go to state 62
    chamada_funcao                 shift and go to state 63

state 30
